# Django-Personal-Assistant

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
DPA/: settings.py
contacts/templates/contacts/: content.html  create_contact.html  edit_contact.html  upcoming_birthdays.html
files/: views.py
users/templates/users/: index.html
