[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Group_6"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
django-environ = "^0.11.2"
pydrive = "^1.3.1"
aiogoogle = "^5.7.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
